deploy: c24b9a84c41a4d3a7a48fff5e532fbcd42442e61

--- a/css/style.css
+++ b/css/style.css
@@ -749,6 +749,26 @@ main {
   width: 100%;
 }
 
+.main-home-page .ready_for_cooperation {
+  color: #ffffff;
+  background-color: #363a4d;
+  width: 95%;
+  margin: 4.5% auto 0;
+  border-radius: 10px;
+  padding-top: 3.6%;
+  padding-bottom: 10%;
+}
+
+.main-home-page .ready_for_cooperation .ready_for_cooperation_section-title h2 {
+  margin-bottom: 0;
+}
+
+.main-home-page .ready_for_cooperation .ready_for_cooperation_section-title h2::after {
+  bottom: -60px;
+  width: 5%;
+  border-bottom: 2px solid #89c249;
+}
+
 .webp .main-home-page .calculation-order .calculation-order__form-block .calculation-order__form .form-check .form-check-input:checked[type=checkbox] { background-image: url(../img/calculation_order/check-vector.webp); }
 
 .webp .main-home-page .usually_questions .usually_questions__accordion .accordion-item .accordion-button::after { background-image: url(../img/usually_questions/Vector-open.webp); }
