--- a/src/sass/sections/home/ready_for_cooperation/_ready_for_cooperation.scss
+++ b/src/sass/sections/home/ready_for_cooperation/_ready_for_cooperation.scss
@@ -50,9 +50,10 @@
 				}
 			}
 		}
-
-		.ready_for_cooperation__form-btn {
-			width: 88%;
+		@include Max_one(991px) {
+			.ready_for_cooperation__form-btn {
+				width: 88%;
+			}
 		}
 	}
 }
