--- a/src/templates/layout/footer.html
+++ b/src/templates/layout/footer.html
@@ -1,1 +1,6 @@
-<h2 class="text-break">https://codepen.io/hellomev/pen/LYORMQW!</h2>
+<div class="row">
+	<div class="col-12 col-xxl-3 col-xl-3 col-lg-3 col-md-3">test</div>
+	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">test</div>
+	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">test</div>
+	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">test</div>
+</div>
