--- a/src/templates/layout/header.html
+++ b/src/templates/layout/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg header__navbar">
 	<div class="container">
-		<a class="navbar-brand header__navbar-brand" href="#"><img class="header_logo" src="img/header/logo.svg" width="172" height="49" alt="Oops image not found" /></a>
+		<a class="navbar-brand header__navbar-brand" href="#"><img class="header_logo" src="img/layout/logo.svg" width="172" height="49" alt="Oops image not found" /></a>
 		<button
 			class="navbar-toggler header__navbar_button"
 			type="button"
@@ -10,7 +10,7 @@
 			aria-expanded="false"
 			aria-label="Toggle navigation"
 		>
-			<img src="img/header/Vector.svg" width="28" height="26" alt="" />
+			<img src="img/layout/Vector.svg" width="28" height="26" alt="" />
 		</button>
 		<div class="collapse navbar-collapse header__navbar-collapse" id="navbarSupportedContent">
 			<div class="d-flex w-100 justify-content-center header_nav_block">
