--- a/src/templates/layout/footer.html
+++ b/src/templates/layout/footer.html
@@ -1,5 +1,11 @@
-<div class="row">
-	<div class="col-12 col-xxl-3 col-xl-3 col-lg-3 col-md-3">test</div>
+<div class="row mt-4">
+	<div class="col-12 col-xxl-3 col-xl-3 col-lg-3 col-md-3">
+		<div class="footer-logo">
+			<a href="https://www.abc.com/">
+				<img src="img/layout/logo.svg" alt="ABC" />
+			</a>
+		</div>
+	</div>
 	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">test</div>
 	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">test</div>
 	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">test</div>
