--- a/src/templates/layout/footer.html
+++ b/src/templates/layout/footer.html
@@ -1,12 +1,52 @@
-<div class="row mt-4">
+<div class="row mt-4 justify-content-center">
 	<div class="col-12 col-xxl-3 col-xl-3 col-lg-3 col-md-3">
 		<div class="footer-logo">
 			<a href="https://www.abc.com/">
-				<img src="img/layout/logo.svg" alt="ABC" />
+				<img src="img/layout/logo.svg" width="172" height="49" alt="ABC" />
 			</a>
 		</div>
+		<div class="footer-contacts">
+			<p class="m-0 p-0 fw-lighter">8(800)600-18-69</p>
+			<p class="m-0 p-0 fw-lighter">info@cargoasia.info</p>
+			<p class="m-0 p-0 fw-lighter">Адрес в Китае:</p>
+			<p class="m-0 p-0 text-break fw-lighter">浙江省金华市义乌市后宅街道洪华小区5 栋一单元一楼RT789库房 高建军 电话15966660379</p>
+		</div>
+
+		<div class="social-network-icons d-flex w-100">
+			<a href="https://www.instagram.com" target="_blank" class="btn"><img src="img/layout/instagram.png" width="34" height="33" alt="Картинка не була знайдена" /></a>
+			<a href="https://web.telegram.org/" target="_blank" class="btn"><img src="img/layout/telegram.png" width="34" height="33" alt="Картинка не була знайдена" /></a>
+			<a href="#" target="_blank" class="btn"><img src="img/layout/vk.png" width="34" height="33" alt="Картинка не була знайдена" /></a>
+		</div>
 	</div>
-	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">test</div>
-	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">test</div>
-	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">test</div>
+	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">
+		<h4 class="fs-4">Грузоперевозки</h4>
+		<div class="footer-links-block">
+			<a href="#"><p class="fw-lighter fs-6">Цены и сроки</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Услуги</p></a>
+			<a href="#"><p class="fw-lighter fs-6">О компании</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Контакты</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Оформить груз</p></a>
+		</div>
+	</div>
+	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">
+		<h4 class="fs-4">Услуги</h4>
+		<div class="footer-links-block">
+			<a href="#"><p class="fw-lighter fs-6">Выкуп товара</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Страховка груза</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Аренда склада</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Перевод денежных средств</p></a>
+		</div>
+	</div>
+	<div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 d-none d-xxl-block d-xl-block d-lg-block d-md-block">
+		<h4 class="fs-4">Информация</h4>
+		<div class="footer-links-block">
+			<a href="#"><p class="fw-lighter fs-6">Отзывы</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Требования к грузу</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Договор-оферта</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Как заключить договор</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Способы оплаты услуг</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Документы</p></a>
+			<a href="#"><p class="fw-lighter fs-6">Статьи</p></a>
+		</div>
+	</div>
 </div>
