--- a/src/templates/sections/home/ready_for_cooperation/index.html
+++ b/src/templates/sections/home/ready_for_cooperation/index.html
@@ -15,7 +15,7 @@
 				<div class="ready_for_cooperation_img"><img src="img/ready_for_cooperation/rectangle-container.png" width="635" height="487" alt="Img not found" /></div>
 			</div>
 		</div>
-		<div class="row flex-row-reverse flex-column-reverse flex-md-row-reverse flex-sm-row-reverse">
+		<div class="row flex-column-reverse flex-xxl-row-reverse flex-xl-row-reverse flex-lg-row-reverse flex-md-column-reverse flex-column-row-reverse">
 			<div class="col-lg-6 col-md-12">
 				<ul>
 					@@loop('./list.html', 'data/home/ready_for_cooperation/list-2.json')
