--- a/src/templates/sections/home/delivery_options/card.html
+++ b/src/templates/sections/home/delivery_options/card.html
@@ -4,8 +4,8 @@
 		<h5 class="fw-semibold fs-5 mt-2 card-title">@@Title</h5>
 		<div class="d-flex justify-content-center w-100 mt-3">
 			<div class="d-flex justify-content-between info_day">
-				<div><img src="img/delivery_options/calendar.png" alt="" /> <span class="ms-2">9-15 дней</span></div>
-				<div><img src="img/delivery_options/box.png" alt="" /> <span class="ms-2">от 5 кг</span></div>
+				<div><img width="22" height="22" src="img/delivery_options/calendar.png" alt="" /> <span class="ms-2">9-15 дней</span></div>
+				<div><img width="22" height="22" src="img/delivery_options/box.png" alt="" /> <span class="ms-2">от 5 кг</span></div>
 			</div>
 		</div>
 		<div class="d-flex justify-content-center align-items-center mt-2">
